# plankton

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN_SYSTEM.md  Dockerfile  README.md  build.rs  package-lock.json  package.json  playwright.config.ts  test-mcp-local.fish  test-mcp.fish  tsconfig.json  webpack.config.js
data/projects/: 3d794d7d-0f0d-4fdd-bf43-76d4f6133b97.json
docs/: api-reference.md  architecture-overview.md  auth-oauth.md  claude-ai-setup.md  data-storage.md  frontend.md  mcp-server.md  mcp.md  realtime-sse.md
flow/: readme.md
src/: attachment_test.rs  auto_archive_job_test.rs  blocking_test.rs  burndown_test.rs  cli_attach_test.rs  cli_write_test.rs  column_entered_at_http_test.rs  column_entered_at_test.rs  config.rs  done_expire_http_test.rs  done_expire_test.rs  error.rs  main.rs  maintenance_job_integration_test.rs  mcp_compat_test.rs  middleware.rs  move_task_to_project_http_test.rs  move_task_to_project_test.rs  notification_center_test.rs  optimistic_locking_test.rs  project_reorder_test.rs  project_type_http_test.rs  project_type_test.rs  slug_dedup_test.rs  state.rs  stats_columns_test.rs  task_templates_test.rs  velocity_test.rs  webhook_test.rs
src/controllers/: admin_controller.rs  attachment_controller.rs  auth_controller.rs  cli_controller.rs  column_controller.rs  event_controller.rs  git_controller.rs  mcp_controller.rs  mod.rs  notification_controller.rs  oauth_controller.rs  project_controller.rs  (+3 more)
static/: bundle.css  bundle.js  bundle.js.LICENSE.txt  index.html  main.js  styles.css
vibe/: readme.md  start-agents.sh
(+210 files in other folders)
