[package]
name = "plankton"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"
anyhow = "1"
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
axum-extra = { version = "0.9", features = ["cookie"] }
git2 = "0.19"
url = "2"
dotenvy = "0.15"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
serde_urlencoded = "0.7"
